# faj-todo-phase2

./: .gitignore  CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  README.md  create_test_user.py  debug_test.py  pyproject.toml  requirements.txt  tasks.json  test_cli_functionality.py  test_connection.py  test_endpoints.py  test_workflow.py
backend/: .env.example  README.md  config.py  main.py  package-lock.json  package.json  requirements.txt
backend/auth/: dependencies.py  exceptions.py  jwt_handler.py  utils.py
backend/checks/: code_quality.py  performance_check.py  security_audit.py
backend/controllers/: task_controller.py
backend/database/: engine.py  session.py
backend/deployment/: config.py
backend/errors/: exceptions.py  handlers.py
backend/middleware/: cors.py  error_middleware.py
backend/models/: task.py  user.py
backend/schemas/: task.py
backend/services/: auth_service.py  task_service.py
backend/src/: server.js
backend/validators/: task_validator.py
docs/: api_usage_examples.md  final_review_checklist.md
frontend/: .gitignore  README.md  package-lock.json  package.json  vercel.json
phase-2/: README.md
phase-2/backend/: .env.example  README.md  app.js  package.json  server.js
phase-2/frontend/: README.md  next.config.js  package.json
specs/001-backend-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-spec/: spec.md
specs/002-advanced-tasks/: data-model.md  plan.md  quickstart.md  (+3 more)
src/: cli.py  database.py  interactive_cli.py  main.py
tests/: backend_test.py
(+91 files in other folders)
