[project]
name = "my-todo"
version = "0.1.0"
description = "Advanced Task Management Application with Recurring Tasks and Reminders"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "pytz>=2023.3.post1",
    "python-multipart>=0.0.6",
    "pywebpush>=2.0.2",
    "cryptography>=41.0.8",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "typer>=0.9.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
todo-app = "src.main:main"
todo-cli = "src.cli:app"